--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>fp_system</title>
-  </head>
-  <body>
-    <div id="app"></div>
-  </body>
+</head>
+<body>
+<div id="app"></div>
+</body>
 </html>
